Closed Bug 790782 Opened 13 years ago Closed 13 years ago

GC: missing a disable call on the StoreBuffer and Nursery

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: terrence, Unassigned)

References

Details

Attachments

(1 file)

Attached patch v0Splinter Review
When initializing a compartment, we need to explicitly disable the StoreBuffer and Nursery if we are not enabling them.
Attachment #660597 - Flags: review?(sphink)
Attachment #660597 - Flags: review?(sphink) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: