Bug 790782 - Fix initialization of StoreBuffer and Nursery; r=sfink

When initializing the compartment, we need to explicitly disable the StoreBuffer
and Nursery if we are not enabling them.