js/src/jscompartment.cpp
@@ -113,6 +113,9 @@ JSCompartment::init(JSContext *cx)
 
         if (!gcStoreBuffer.enable())
             return false;
+    } else {
+        gcNursery.disable();
+        gcStoreBuffer.disable();
     }
 #endif
 
